# auto-markup2

./: Dockerfile  README.md  alembic.ini  docker-compose.example.yml  example.env  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 2025-10-23_initial.py  2025-11-06_add_approved_f_study_status.py  2025-11-06_add_nc_last_upload_link.py  2025-11-07_add_product_field.py  2025-11-07_add_reject_comment_msg_id_field.py  2025-11-10_new_statuses.py  2025-11-10_study_status_history.py  2025-11-11_study_category.py
bot/: register_handlers.py
bot/handlers/: common.py  registration.py
bot/handlers/admin/: add_project.py  add_user_to_project.py  cancel_task.py  generate_reg_link.py
bot/handlers/annotate/: annotator_logic.py  utils.py  validator_logic.py
bot/middleware/: album_middleware.py
bot/states/: add_project.py  add_user_to_project.py  cancel_task.py  check_categories.py  expert_pre_anno.py  registration.py  reject.py
bot/utils/: commands.py  deep_link_codec.py
core/: config.py  database.py  di.py  unit_of_work.py
core/models/: __init__.py  base.py  batch.py  project.py  study.py  study_category.py  study_status_history.py  user.py
core/repositories/: base.py  batch_repo.py  project_repo.py  study_category_repo.py  study_repo.py  user_repo.py
core/utils/: logging_config.py  nextcloud.py
web_api/: routes.py  schemas.py
web_api/services/: exceptions.py  webhook_service.py
web_api/utils/: path_filter.py
